# kira-spatial-field

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: field_ops.rs
examples/: axis_field.rs
src/: axis.rs  cache.rs  error.rs  field.rs  gene_field.rs  lib.rs  metadata.rs  normalization.rs  reduction.rs
src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
tests/: audit_fixes.rs  property_tests.rs  simd_determinism.rs
